tests/reference/asr_preprocess-cpp3-1719443.stderr
semantic error: Variable 'xx' is not declared
 --> tests/errors/cpp3.f90:7:10
  |
7 | print *, xx, X123, y
  |          ^^ 'xx' is undeclared
